--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
  #   url: /year-archive/
     
   - title: "CV"
-    url: /cv2/
+    url: _pages/cv2/
     
   # - title: "CV"
   #   url: /cv-json/
