--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "tayteadderley/tayteadderley.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "1000065902.png"
+  avatar           : "Profile Photo.png"
   name             : "Tayte M. Adderley"
   pronouns         : # example: "she/her"  
   bio              : "PhD Student in Public Policy"
